--- a/readme
+++ b/readme
@@ -11,3 +11,76 @@ ts -> js -- ts
 
 # ts-node -> tsx
 ex) tsx .\src\index.ts
+
+
+섹션 1: 강의 소개 및 타입스크립트 개론 (1시간 11분)
+강의 소개와 개발 환경 준비
+
+타입스크립트 개요 및 자바스크립트와의 차이점
+
+타입스크립트 동작 원리와 ts-node 문제 해결
+
+타입스크립트 컴파일러 옵션 설정
+
+섹션 2: 타입스크립트 기본 (1시간 13분)
+기본타입 (Number, String, Boolean 등)
+
+원시타입과 리터럴타입
+
+배열, 튜플, 객체 타입
+
+타입 별칭, 인덱스 시그니처, Enum
+
+Any, Unknown, Void, Never 타입
+
+섹션 3: 타입스크립트 이해하기 (2시간 2분)
+타입 집합과 타입 계층도
+
+객체 타입의 호환성, 대수 타입
+
+타입 추론, 타입 단언, 타입 좁히기
+
+서로소 유니온 타입 개념
+
+섹션 4: 함수와 타입 (53분)
+함수 타입과 호출 시그니쳐
+
+함수 호환성, 오버로딩
+
+사용자 정의 타입 가드 사용법
+
+섹션 5: 인터페이스 (25분)
+인터페이스 개념과 확장, 합치기
+
+섹션 6: 클래스 (42분)
+자바스크립트 클래스와 타입스크립트 클래스
+
+접근 제어자와 인터페이스와 클래스의 관계
+
+섹션 7: 제네릭 (1시간 12분)
+제네릭 소개 및 타입 변수 응용
+
+제네릭 인터페이스, 타입 별칭, 제네릭 클래스
+
+프로미스와 제네릭
+
+섹션 8: 타입 조작하기 (36분)
+타입 조작 개념
+
+인덱스드 엑세스 타입, keyof 연산자, 맵드 타입
+
+템플릿 리터럴 타입 사용법
+
+섹션 9: 조건부 타입 (39분)
+조건부 타입 소개 및 분산 조건부 타입
+
+infer를 사용한 타입 추론
+
+섹션 10: 유틸리티 타입 (39분)
+유틸리티 타입 소개
+
+Partial, Required, Readonly와 같은 맵드 타입 기반 유틸리티
+
+Pick, Omit, Record와 같은 유틸리티
+
+Exclude, Extract, ReturnType 등의 조건부 타입 기반 유틸리티
